feat: add notebook for movie of the month extraction and movie scraper

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 ###################################
-#            Files                #
+#             Files               #
 ###################################
 
 selection_film.xlsx
+new_movies.xlsx
+scrap_it.csv
+
+###################################
+#          Environement           #
+###################################
+
+.env
